--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.9.0",
+    "axios-cookiejar-support": "^5.0.5",
     "chalk": "^4.1.2",
     "cheerio": "^1.1.0",
     "crypto-js": "^4.2.0",
@@ -30,7 +31,8 @@
     "qs": "^6.14.0",
     "sharp": "^0.34.2",
     "telegraf": "^4.12.3",
-    "telegram": "^2.19.10"
+    "telegram": "^2.19.10",
+    "tough-cookie": "^4.1.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
